welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:60: error: not found: value k
while (k != 12 ) {
       ^MethodsPictureLarge:62: error: not found: value k
k=k+1
^